@@ -1,5 +1,7 @@
 2005-12-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/program-option.cc (LY_DEFINE): remove Protected_scm global variable.
+
 	* flower/parse-afm.cc (Module): strip AFM handling completely.
 
 	* lily/stencil-expression.cc: idem.
